Track positions for input streams and clean up unnecessary keywords